зделал шапку + начал git

--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <html>
 <head>
 	<link rel="stylesheet" href="style.css">
-	<title>мой первый блог</title>
+	<title>блог</title>
 </head>
 <body>
-	<p>тестовый текст</p>
-	<p>добавляю текст</p>
-	<p>еще немного текста</p>
+	<div class="header">
+		<p class="header_name"><span class="my_name">Савченков Андрей</span><br> мой скромный блог о веб-зазработке растет вместе со мной</p>
+	</div>
+
+	<section>
+		<h1>Мой первый пост о GIT (23.07.2018)</h1>
+		<p>
+			буду редактировать
+		</p>
+	</section>
 </body>
 </html>
