добавляем подсказку по git

--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
 
 	<section>
 		<h1>Мой первый пост о GIT (23.07.2018)</h1>
-		<p>
-			буду редактировать
-		</p>
+		<p>Так как я только начал изучение технологии git и сайта github, то оставлю здесь небольшую подсказку по самым необходимым командам.</p>
+		<dl>
+			<dt>git add .</dt><dd> - добавить все файлы.</dd> 
+			<dt>git commit -m""</dt><dd> - сделать коммит.</dd>
+			<dt>git push origin master</dt><dd> - запушить в текущую ветку.</dd>
+			<dt>git status</dt><dd> - проверка текущего состояния репозитория.</dd>
+		</dl>
 	</section>
 </body>
 </html>
