--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div class="header">
-		<p class="header_name"><span class="my_name">Савченков Андрей</span><br> мой скромный блог о веб-зазработке растет вместе со мной</p>
+		<p class="header_name"><span class="my_name">Савченков Андрей</span><br> мой скромный блог о веб-разработке</p>
 	</div>
 
 	<section>
@@ -19,6 +19,17 @@
 			<dt>git push origin master</dt><dd> - запушить в текущую ветку.</dd>
 			<dt>git status</dt><dd> - проверка текущего состояния репозитория.</dd>
 		</dl>
+	</section>
+	<!--добавляю пост о создании меню 27.07.2018-->
+	<section>
+		<h1>Подсказка к созданию меню</h1>
+			<ol>
+				<li>Размечаем html код. Меню - это список ссылок.</li>
+				<li>Сбрасываем стили списка. Добавим класс "main-menu". Обнулим отступы "margin: 0; padding: 0". Уберем маркеры "list-style: none;"</li>
+				<li>Делаем ссылки меню блочными ".main-menu a {display: block;}"</li>
+				<li>При желании можно убрать подчеркивания ссылкам при помощи свойств "text-decoration: none;"</li>
+				<li>Псевдокласс :hover (выбираем элемент, когда на него наведен курсор и кнопка мыши не нажата)</li>
+			</ol>
 	</section>
 </body>
 </html>
