--- a/index.html
+++ b/index.html
@@ -10,26 +10,29 @@
 		<p class="header_name"><span class="my_name">Савченков Андрей</span><br> мой скромный блог о веб-разработке</p>
 	</div>
 
-	<section>
-		<h1>Мой первый пост о GIT (23.07.2018)</h1>
-		<p>Так как я только начал изучение технологии git и сайта github, то оставлю здесь небольшую подсказку по самым необходимым командам.</p>
-		<dl>
+	<div class="container">
+
+		<div class="section">
+			<h1>Мой первый пост о GIT (23.07.2018)</h1>
+			<p>Так как я только начал изучение технологии git и сайта github, то оставлю здесь небольшую подсказку по самым необходимым командам.</p>
+			<dl>
 			<dt>git add .</dt><dd> - добавить все файлы.</dd> 
 			<dt>git commit -m""</dt><dd> - сделать коммит.</dd>
 			<dt>git push origin master</dt><dd> - запушить в текущую ветку.</dd>
 			<dt>git status</dt><dd> - проверка текущего состояния репозитория.</dd>
-		</dl>
-	</section>
+			</dl>
+		</div>
 	<!--добавляю пост о создании меню 27.07.2018-->
-	<section>
-		<h1>Подсказка к созданию меню</h1>
+		<div class="section">
+			<h1>Подсказка к созданию меню</h1>
 			<ol>
-				<li>Размечаем html код. Меню - это список ссылок.</li>
-				<li>Сбрасываем стили списка. Добавим класс "main-menu". Обнулим отступы "margin: 0; padding: 0". Уберем маркеры "list-style: none;"</li>
-				<li>Делаем ссылки меню блочными ".main-menu a {display: block;}"</li>
-				<li>При желании можно убрать подчеркивания ссылкам при помощи свойств "text-decoration: none;"</li>
-				<li>Псевдокласс :hover (выбираем элемент, когда на него наведен курсор и кнопка мыши не нажата)</li>
-			</ol>
-	</section>
+			<li>Размечаем html код. Меню - это список ссылок.</li>
+			<li>Сбрасываем стили списка. Добавим класс "main-menu". Обнулим отступы "margin: 0; padding: 0". Уберем маркеры "list-style: none;"</li>
+			<li>Делаем ссылки меню блочными ".main-menu a {display: block;}"</li>
+			<li>При желании можно убрать подчеркивания ссылкам при помощи свойств "text-decoration: none;"</li>
+			<li>Псевдокласс :hover (выбираем элемент, когда на него наведен курсор и кнопка мыши не нажата)</li>
+			</ol> 
+		</div>
+	</div>
 </body>
 </html>
