--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 	<div class="header">
 		<p class="header_name"><span class="my_name">Савченков Андрей</span><br> мой скромный блог о веб-разработке</p>
+		<img class="face" src="img/face.jpg" alt="">
 	</div>
 
 	<div class="container">
