--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
 	<div class="container">
 
+		<a href="../mogo/index.html">верстка MoGo</a>
+
 		<div class="section">
 			<h1>Мой первый пост о GIT (23.07.2018)</h1>
 			<p>Так как я только начал изучение технологии git и сайта github, то оставлю здесь небольшую подсказку по самым необходимым командам.</p>
