regoing the site

--- a/index.html
+++ b/index.html
@@ -1,41 +1,45 @@
-<!DOCTYPE html>
+<!DOCTYPE >
 <html>
-<head>
-	<meta charset="utf-8">
-	<link rel="stylesheet" href="style.css">
-	<title>AndreySavchenknov</title>
-</head>
-<body>
-	<div class="header">
-		<p class="header_name"><span class="my_name">Савченков Андрей</span><br> мой скромный блог о веб-разработке</p>
-		<img class="face" src="img/face.jpg" alt="">
-	</div>
+	<head>
+		<meta charset="utf-8">
+		<link rel="stylesheet" href="style.css">
+		<title>AndreySavchenknov</title>
+		<link href="https://fonts.googleapis.com/css?family=Days+One|Kaushan+Script|Swanky+and+Moo+Moo&display=swap" rel="stylesheet">
+	</head>
+	<body>
+		<header>
+			<div class="container">
+				<div class="header">
+					<h1>Andrey Savchenkov</h1>
+					<h2>Frontend Developer</h2>
+					<img class="face" src="img/face.png" alt="face">	
+				</div>
+			</div>
+		</header>
+		<section>
+			<div class="container">
+			<h2>My stack: </h2>
 
-	<div class="container">
+				HTML5
+				CSS3
+				GIT
+				JS
+				PHOTOSHOP
+				
+			</div>
+		</section>
+		<section>
+			<div class="container">
+			<h2>My projects:</h2>
 
-		<a href="../mogo/index.html">верстка MoGo</a>
+				<a href="../mogo/index.html">верстка MoGo</a>
+			</div>
+		</section>
+		<footer>
 
-		<div class="section">
-			<h1>Мой первый пост о GIT (23.07.2018)</h1>
-			<p>Так как я только начал изучение технологии git и сайта github, то оставлю здесь небольшую подсказку по самым необходимым командам.</p>
-			<dl>
-			<dt>git add .</dt><dd> - добавить все файлы.</dd> 
-			<dt>git commit -m""</dt><dd> - сделать коммит.</dd>
-			<dt>git push origin master</dt><dd> - запушить в текущую ветку.</dd>
-			<dt>git status</dt><dd> - проверка текущего состояния репозитория.</dd>
-			</dl>
-		</div>
-	<!--добавляю пост о создании меню 27.07.2018-->
-		<div class="section">
-			<h1>Подсказка к созданию меню</h1>
-			<ol>
-			<li>Размечаем html код. Меню - это список ссылок.</li>
-			<li>Сбрасываем стили списка. Добавим класс "main-menu". Обнулим отступы "margin: 0; padding: 0". Уберем маркеры "list-style: none;"</li>
-			<li>Делаем ссылки меню блочными ".main-menu a {display: block;}"</li>
-			<li>При желании можно убрать подчеркивания ссылкам при помощи свойств "text-decoration: none;"</li>
-			<li>Псевдокласс :hover (выбираем элемент, когда на него наведен курсор и кнопка мыши не нажата)</li>
-			</ol> 
-		</div>
-	</div>
-</body>
+
+		</footer>
+
+		
+	</body>
 </html>
