--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE >
 <html>
 	<head>
-		
+
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="style.css">
 		<title>AndreySavchenknov</title>
@@ -11,11 +11,21 @@
 	<body>
 		<header>
 			<div class="container">
-				<div class="header">
+			<div class="header">
+				
 					<h1>Andrey Savchenkov</h1>
 					<h2>Frontend Developer</h2>
 					<img class="face" src="img/face.png" alt="face">	
+				
+				<div class="social">
+					<a href="#"><img src="img/social-icon/github.png" alt="github"></a>
+					<a href="#"><img src="img/social-icon/lindedin.png" alt="linkedin"></a>
+					<a href="#"><img src="img/social-icon/instagramm.png" alt="instagramm"></a>
+					<a href="#"><img src="img/social-icon/vk.png" alt="vk"></a>
+					<a href="#"><img src="img/social-icon/viber.png" alt="viber"></a>
+					<a href="#"><img src="img/social-icon/phone.png" alt="phone"></a>
 				</div>
+			</div>
 			</div>
 		</header>
 		<section>
