--- a/mogo/index.html
+++ b/mogo/index.html
@@ -202,5 +202,46 @@
         </div>
     </section>
 
+    <section class="section">
+        <div class="container">
+
+                <div class="section__header">
+                        <h3 class="section__suptitle">Service</h3>
+                        <h2 class="section__title">what we do</h2>
+                        <div class="services__text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim 
+                            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                       </div>
+                </div>
+
+                <div class="wedo">
+                    <div class="wedo__item">
+                        <img src="assets/images/wedo/wedo.png" alt="">
+                    </div>
+                    <div class="wedo__item">
+
+                        <div class="accordion">
+                            <div class="accordion__item">
+                                <div class="accordion__header">
+                                    <img src="assets/images/wedo/1.png" alt="" class="acordion__icon">
+                                    <div class="accodion__title">Photography</div>
+                                </div>
+                                <div class="accordion__content">
+                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                                      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
+                                      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                                       dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
+                                       sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                </div>
+                            </div>
+                        </div><!--/.accordion-->
+
+                    </div><!--/.wedo__item-->
+                </div> <!--/.wedo-->
+           
+        </div>
+    </section>
+
 </body>
 </html>
