--- a/mogo/index.html
+++ b/mogo/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat: 300i,400,700&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -223,7 +223,7 @@
                         <div class="accordion">
                             <div class="accordion__item">
                                 <div class="accordion__header">
-                                    <img src="assets/images/wedo/1.png" alt="" class="acordion__icon">
+                                    <img class="accordion__icon" src="assets/images/wedo/1.png" alt="" >
                                     <div class="accodion__title">Photography</div>
                                 </div>
                                 <div class="accordion__content">
