--- a/mogo/index.html
+++ b/mogo/index.html
@@ -235,6 +235,22 @@
                                        sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                                 </div>
                             </div>
+
+
+                            <div class="accordion__item active">
+                                <div class="accordion__header">
+                                    <img class="accordion__icon" src="assets/images/wedo/2.png" alt="" >
+                                    <div class="accodion__title">Creativity</div>
+                                </div>
+                                <div class="accordion__content">
+                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                                      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
+                                      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                                       dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
+                                       sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                </div>
+                            </div>
                         </div><!--/.accordion-->
 
                     </div><!--/.wedo__item-->
