--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 					<img class="face" src="img/face.png" alt="face">	
 				
 				<div class="social">
-					<a href="#"><img src="img/social-icon/github.png" alt="github"></a>
-					<a href="#"><img src="img/social-icon/lindedin.png" alt="linkedin"></a>
-					<a href="#"><img src="img/social-icon/instagramm.png" alt="instagramm"></a>
-					<a href="#"><img src="img/social-icon/vk.png" alt="vk"></a>
-					<a href="#"><img src="img/social-icon/viber.png" alt="viber"></a>
-					<a href="#"><img src="img/social-icon/phone.png" alt="phone"></a>
+					<a href="https://github.com/AndreySavchenkov"><img src="img/social-icon/github.png" alt="github"></a>
+					<a href="https://www.linkedin.com/in/andrey-savchenkov/"><img src="img/social-icon/lindedin.png" alt="linkedin"></a>
+					<a href="https://www.instagram.com/sandvik16/"><img src="img/social-icon/instagramm.png" alt="instagramm"></a>
+					<a href="https://vk.com/savchenkov1990"><img src="img/social-icon/vk.png" alt="vk"></a>
+					<a href="viber.me/+375336721429"><img src="img/social-icon/viber.png" alt="viber"></a>
+					<a href="tel:+375336721429"><img src="img/social-icon/phone.png" alt="phone"></a>
 				</div>
 			</div>
 			</div>
