--- a/mogo/index.html
+++ b/mogo/index.html
@@ -274,5 +274,19 @@
         </div>
     </section>
 
+    <div class="section section--gray">
+        <div class="container">
+            <div class="reviews">
+                <div class="reviews__item">
+                    <img src="" alt="">
+                    <div class="reviews__text">
+                        “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.”
+                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
