--- a/mogo/index.html
+++ b/mogo/index.html
@@ -278,11 +278,12 @@
         <div class="container">
             <div class="reviews">
                 <div class="reviews__item">
-                    <img src="" alt="">
+                    <img class="reviews__photo" src="http://placehold.it/145" alt="">
                     <div class="reviews__text">
                         “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                         dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.”
                      </div>
+                     <div class="reviews__author">Jon Doe</div>
                 </div>
             </div>
         </div>
