--- a/mogo/index.html
+++ b/mogo/index.html
@@ -277,6 +277,10 @@
     <div class="section section--gray">
         <div class="container">
             <div class="reviews">
+
+                <a class='reviews__btn reviews__btn--prev' href="#">Prev</a>
+                <a class='reviews__btn reviews__btn--next' href="#">Next</a>
+
                 <div class="reviews__item">
                     <img class="reviews__photo" src="http://placehold.it/145" alt="">
                     <div class="reviews__text">
