--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="header">
 				
 					<h1>Andrey Savchenkov</h1>
-					<h2>Frontend Developer</h2>
+					<h2>Junior Frontend Developer</h2>
 					<img class="face" src="img/face.png" alt="face">	
 				
 				<div class="social">
@@ -44,7 +44,7 @@
 			<div class="container">
 			<h2>My projects:</h2>
 
-				<a href="../mogo/index.html">верстка MoGo</a>
+				<a href="../mogo/index.html">Site layout "MoGo"</a>
 			</div>
 		</section>
 		<footer>
