--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 
 		<meta charset="utf-8">
+		<link rel="stylesheet" href="normalize.css">
 		<link rel="stylesheet" href="style.css">
 		<title>Andrey Savchenknov</title>
 		<link href="https://fonts.googleapis.com/css?family=Days+One|Kaushan+Script|Swanky+and+Moo+Moo&display=swap" rel="stylesheet">
