--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE >
+<doctype!>
 <html lang='en'>
 	<head>
 
@@ -28,7 +28,7 @@
 						<a href='viber://add?number=375336721429'><img src="img/social-icon/viber.png" alt="viber"></a>
 						<a href="tel:+375336721429"><img src="img/social-icon/phone.png" alt="phone"></a>
 					</div>
-				</<h1>
+				</div>
 			</div>
 		</header>
 		<section>
@@ -52,7 +52,8 @@
 							<li>Accuracy</li>
 							<li>High learning</li>
 						</ul>
-				   	</div>
+					</div>
+				</div>
 			</div>
 		</section>
 		<section>
