--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-<doctype!>
-<html lang='en'>
+<!DOCTYPE html>
+<html lang="en">
 	<head>
 
 		<meta charset="utf-8">
+		<meta name="keywords" content="Frontend,Web,dev,programing,html,CSS,GIT,JS">
 		<link rel="stylesheet" href="normalize.css">
 		<link rel="stylesheet" href="style.css">
 		<title>Andrey Savchenknov</title>
