--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 			<div class="container">
 				<div class="projects">
 					<h2 class="h2--project">My projects:</h2>
-					<a  href="../mogo/index.html">"MoGo"</a>
-					<a href="../barbershop/index.html">"Barbershop"</a>
+					<a class="projects-link" href="../mogo/index.html">"MoGo"</a>
+					<a class="projects-link" href="../barbershop/index.html">"Barbershop"</a>
 				</div>
 			</div>
 		</section>
