--- a/barbershop/catalog.html
+++ b/barbershop/catalog.html
@@ -26,10 +26,28 @@
         <h1 class="page-title">Средство для ухода</h1>
 
         <ul class="breadcrumbs">
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
+            <li><a href="index.html">Главная</a></li>
+            <li><a href="catalog.html">Магазин</a></li>
+            <li><a href="breadcrubms-current">Средства для ухода</a></li>
         </ul>
+        <section class="filters">
+            <h2 class="visually-hidden">Фильтр товаров</h2>
+            <!--Здесь будет форма-->
+        </section>
+
+        <section class="catalog">
+            <h2 class="visually-hidden">Список средств для ухода</h2>
+            <ul class="catalog-list">
+                <li class="catalog-item">
+                    <h3>
+                         <a href="catalog-item.html">
+                             <span class="catalog-category"> Набор для путешествий</span> 
+                             <span class="catalog-item-title"> Baxter of California </span>
+                        </a>
+                    </h3>
+                </li>
+            </ul>
+        </section>
     </main>
 </body>
 </html>
