--- a/barbershop/catalog.html
+++ b/barbershop/catalog.html
@@ -38,6 +38,7 @@
         <section class="catalog">
             <h2 class="visually-hidden">Список средств для ухода</h2>
             <ul class="catalog-list">
+
                 <li class="catalog-item">
                     <h3>
                          <a href="catalog-item.html">
@@ -45,6 +46,105 @@
                              <span class="catalog-item-title"> Baxter of California </span>
                         </a>
                     </h3>
+                    <p class="catalog-item-image">
+                        <a href="catalog-item.html">
+                            <img src="img/product-1.jpg" width="220" height="165" alt="Набор для путешествий Baxter of California">
+                        </a>
+                    </p>
+                    <p class="catalog-iem-price">
+                        <b>2 900 р</b>
+                        <a href="#" class="button">Купить</a>
+                    </p>
+                </li>
+
+                <li class="catalog-item">
+                    <h3>
+                        <a href="catalog-item.html">
+                            <span class="catalog-category"> Увлажнающий кондиционер</span> 
+                            <span class="catalog-item-title"> Baxter of California </span>
+                        </a>
+                    </h3>
+                    <p class="catalog-item-image">
+                        <a href="catalog-item.html">
+                            <img src="img/product-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер Baxter of California">
+                        </a>
+                    </p>
+                    <p class="catalog-iem-price">
+                        <b>750 р</b>
+                        <a href="#" class="button">Купить</a>
+                    </p>
+                </li>
+
+                <li class="catalog-item">
+                        <h3>
+                            <a href="catalog-item.html">
+                                <span class="catalog-category"> Гель для волос</span> 
+                                <span class="catalog-item-title">Suavetico</span>
+                            </a>
+                        </h3>
+                        <p class="catalog-item-image">
+                            <a href="catalog-item.html">
+                                <img src="img/product-3.jpg" width="220" height="165" alt="Гель для волос Suavetico">
+                            </a>
+                        </p>
+                        <p class="catalog-iem-price">
+                            <b>290 р</b>
+                            <a href="#" class="button">Купить</a>
+                        </p>
+                </li>
+
+                <li class="catalog-item">
+                        <h3>
+                            <a href="catalog-item.html">
+                                <span class="catalog-category">Глина для укладки волос</span> 
+                                <span class="catalog-item-title">American crew</span>
+                            </a>
+                        </h3>
+                        <p class="catalog-item-image">
+                            <a href="catalog-item.html">
+                                <img src="img/product-4.jpg" width="220" height="165" alt="Глина для укладки волос American Crew">
+                            </a>
+                        </p>
+                        <p class="catalog-iem-price">
+                            <b>500 р</b>
+                            <a href="#" class="button">Купить</a>
+                        </p>
+                </li>
+
+                <li class="catalog-item">
+                        <h3>
+                            <a href="catalog-item.html">
+                                <span class="catalog-category">Гель для волос</span> 
+                                <span class="catalog-item-title">American crew</span>
+                            </a>
+                        </h3>
+                        <p class="catalog-item-image">
+                            <a href="catalog-item.html">
+                                <img src="img/product-5.jpg" width="220" height="165" alt="Гель для волос American Crew">
+                            </a>
+                        </p>
+                        <p class="catalog-iem-price">
+                            <b>300 р</b>
+                            <a href="#" class="button">Купить</a>
+                        </p>
+                </li>
+
+                <li class="catalog-item">
+                        <h3>
+                            <a href="catalog-item.html">
+                                <span class="catalog-category">Набор для бритья</span> 
+                                <span class="catalog-item-title">Baxter of California</span>
+                            </a>
+                        </h3>
+                        <p class="catalog-item-image">
+                            <a href="catalog-item.html">
+                                <img src="img/product-6.jpg" width="220" height="165" alt="Набор для бритья Baxter of California">
+                            </a>
+                        </p>
+                        <p class="catalog-iem-price">
+                            <b>3 900 р</b>
+                            <a href="#" class="button">Купить</a>
+                        </p>
                 </li>
             </ul>
         </section>
