--- a/barbershop/index.html
+++ b/barbershop/index.html
@@ -31,7 +31,7 @@
             <ul class="features-list">
                 <li class="features-item">
                     <h3>Быстро</h3>
-                    <p>Мы делаем свою работу быстро! два часа пролетят незаметно и вы - счастливый обладатель стльной стрижки-минутки!</p>
+                    <p>Мы делаем свою работу быстро! два часа пролетят незаметно и вы - счастливый обладатель стильной стрижки-минутки!</p>
                 </li>
                 <li class="fatures-item">
                     <h3>Круто</h3>
