add my site shadow for my mane

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<div class="container">
 				<div class="header">
 					<div class="header--myName">
-						<h1>Andrey Savchenkov</h1>
+						<h1 class="my_name">Andrey Savchenkov</h1>
 						<h2>Junior Frontend Developer</h2>
 					</div>
 					<div class="header--myFoto">
