--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 		<meta charset="utf-8">
 		<meta name="keywords" content="Frontend,Web,dev,programing,html,CSS,GIT,JS">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="normalize.css">
 		<link rel="stylesheet" href="style.css">
 		<title>Andrey Savchenknov</title>
