add on my site aria-label

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 						<img class="face" src="img/face.png" alt="face">	
 					</div>
 					<div class="header--mySocial">
-						<a href="https://github.com/AndreySavchenkov"><img src="img/social-icon/github.png" alt="github"></a>
-						<a href="https://www.linkedin.com/in/andrey-savchenkov/"><img src="img/social-icon/lindedin.png" alt="linkedin"></a>
-						<a href="https://www.instagram.com/sandvik16/"><img src="img/social-icon/instagramm.png" alt="instagramm"></a>
-						<a href="https://vk.com/savchenkov1990"><img src="img/social-icon/vk.png" alt="vk"></a>
-						<a href='viber://add?number=375336721429'><img src="img/social-icon/viber.png" alt="viber"></a>
-						<a href="tel:+375336721429"><img src="img/social-icon/phone.png" alt="phone"></a>
+						<a href="https://github.com/AndreySavchenkov" aria-label="github"><img src="img/social-icon/github.png" alt="github"></a>
+						<a href="https://www.linkedin.com/in/andrey-savchenkov/" aria-label="linkedin"><img src="img/social-icon/lindedin.png" alt="linkedin"></a>
+						<a href="https://www.instagram.com/sandvik16/" aria-label="instagram"><img src="img/social-icon/instagramm.png" alt="instagramm"></a>
+						<a href="https://vk.com/savchenkov1990" aria-label="vkontakte"><img src="img/social-icon/vk.png" alt="vk"></a>
+						<a href="viber://add?number=375336721429" aria-label="viber"><img src="img/social-icon/viber.png" alt="viber"></a>
+						<a href="tel:+375336721429" aria-label="phone_number"><img src="img/social-icon/phone.png" alt="phone"></a>
 					</div>
 				</div>
 			</div>
