--- a/barbershop/index.html
+++ b/barbershop/index.html
@@ -18,7 +18,9 @@
                 <li><a href="contacts">Контакты</a></li>
             </ul>
             <ul class="user-navigation">
-                <li class="login-link">Вход</li>
+                <li class="login-link">
+                    <a href="login.html" class="login-link">Вход</a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -27,7 +29,7 @@
         <h1 class="visually-hidden">Барбершоп Бородинский</h1>
 
         <section class="features">
-            <h2 class="visually-headen">Преимущества</h2>
+            <h2 class="visually-hidden">Преимущества</h2>
             <ul class="features-list">
                 <li class="features-item">
                     <h3>Быстро</h3>
@@ -64,8 +66,8 @@
             <figure class="gallery-content">
                 <a href="#"><img src="img/studio.jpg" width="286" height="164" alt="Интерьер"></a>
             </figure>
-            <span class="button gallery-button gallery-button-back gallery-button-back">Назад</span>
-            <span class="button gallery-button gallery-button-back gallery-button-next">Вперед</span>
+            <button class="button gallery-button gallery-button-back" type="button">Назад</button>
+            <button class="button gallery-button gallery-button-next" type="button">Вперед</button>
         </section>
 
         <section class="contacts">
@@ -87,7 +89,25 @@
         <section class="appointment">
             <h2>Записаться</h2>
             <p class="appointment-info">Укажите желаемую дату и время и мы свяжемся с вами для подтверждения брони</p>
-            <!--Здесь будет форма-->
+            <form action="https://echo.htmlacademy.ru" class="appointment-form" method="POST">
+                <p class="appointment-item">
+                    <label for="appointment-date">Дата</label>
+                    <input id="appointment-date" type="text" name="date" value="" placeholder="09.11.2019">
+                </p>
+                <p class="appointment-item">
+                    <label for="appointment-time"></label>
+                    <input id="appointment-time" type="text" name="time" value="" placeholder="10:00">
+                </p>
+                <p class="appointment-item">
+                    <label for="appointment-name"></label>
+                    <input id="appointment-name" type="text" name="name" value="" placeholder="Борода">
+                </p>
+                <p class="appointment-item">
+                    <label for="appointment-phone"></label>
+                    <input id="appointment-phone" type="tel" name="phone" value="" placeholder="+375 (33) 672-14-29">
+                </p>
+                <button class="button" type="submit">Отправить </button>
+            </form>
         </section>
     </main>
     <footer class="main-footer">
@@ -114,12 +134,34 @@
     <section class="modal modal-login">
         <h2>Личный кабинет</h2>
         <p>Введите свой логин и пароль.</p>
-        <!--Здесь будет форма-->
-        <span class="modal-close">x</span>
+        <form action="https://echo.thmlacademy.ru" class="login-form" method="POST">
+            <p>
+                <label class="visually-hidden" for="user-login">Логин</label>
+                <input class="login-icon-user" id="user-login" type="text" name="login" placeholder="Логин">
+            </p>
+            <p>
+                <label for="user-password" class="visually-hidden">Пароль</label>
+                <input class="login-icon-password" id="user-password" type="text" name="password" placeholder="Пароль">
+            </p>
+            <p class="login-password-info">
+                <label class="login-checkbox">
+                    <input type="checkbox" name="remember" class="viually-hidden">
+                    <span class="checkbox-indicator"></span>
+                    Запомнить меня
+                </label>
+                <a href="#" class="restore">Я забыл пароль!</a>
+            </p>
+            <button class="button" type="submit">Войти</button>
+        </form>
+        <button class="modal-close" type="button">Закрыть</button>
     </section>
+
     <section class="modal modal-map">
         <h2 class="visually-hidden">Как до нас добраться</h2>
-        <span class="modal-close">x</span>
+        <p>
+            <img src="img/map.jpg" width="780" height="560" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
+        </p>
+        <button class="modal-close" type="button">Закрыть</button>
     </section>
 </body>
 </html>
