add form on catalog.html from barbershop site

--- a/barbershop/catalog.html
+++ b/barbershop/catalog.html
@@ -28,11 +28,51 @@
         <ul class="breadcrumbs">
             <li><a href="index.html">Главная</a></li>
             <li><a href="catalog.html">Магазин</a></li>
-            <li><a href="breadcrubms-current">Средства для ухода</a></li>
+            <li><a href="breadcrubms-current.html">Средства для ухода</a></li>
         </ul>
         <section class="filters">
             <h2 class="visually-hidden">Фильтр товаров</h2>
-            <!--Здесь будет форма-->
+            <form action="https://echo.htmlacacademy.ru" class="filter" method="get">
+                <fieldset>
+                    <legend>Производители:</legend>
+                    <ul>
+                        <li class="filter-option">
+                            <input type="checkbox" class="visually-hidden filter-input filter-input-checkbox" name="baxter-of-california" checked 
+                            id="filter-baxter-of-california">
+                            <label for="filter-baxter-of-california">Baxter of California</label> 
+                        </li>
+                        <li class="filter-option">
+                            <input type="checkbox" class="visually-hidden filter-input filter-input-checkbox" name="mr-natty"
+                            id="filter-mr-natty">
+                            <label for="filter-mr-natty">Mr Natty</label> 
+                        </li>
+                        <li class="filter-option">
+                            <input type="checkbox" class="visually-hidden filter-input filter-input-checkbox" name="suavecito" checked
+                            id="filter-suavecito">
+                            <label for="filter-suavecito">Suavecito</label> 
+                        </li>
+                        <li class="filter-option">
+                            <input type="checkbox" class="visually-hidden filter-input filter-input-checkbox" name="malin-goetz"
+                            id="filter-mlin-goetz">
+                            <label for="filter-mlin-goetz">Mlin+Goetz</label> 
+                        </li>
+                        <li class="filter-option">
+                            <input type="checkbox" class="visually-hidden filter-input filter-input-checkbox" name="murrays"
+                            id="filter-murrays">
+                            <label for="filter-murrays">Myrray's</label> 
+                        </li>
+                        <li class="filter-option">
+                            <input type="checkbox" class="visually-hidden filter-input filter-input-checkbox" name="american-crew" checked
+                            id="filter-american-crew">
+                            <label for="filter-american-crew">American Crew</label> 
+                        </li>
+                    </ul>
+                </fieldset>
+                <fieldset>
+                    <legend>Группы товаров:</legend>
+
+                </fieldset>
+            </form>
         </section>
 
         <section class="catalog">
