--- a/barbershop/catalog.html
+++ b/barbershop/catalog.html
@@ -70,7 +70,23 @@
                 </fieldset>
                 <fieldset>
                     <legend>Группы товаров:</legend>
-
+                    <ul>
+                        <li class="filter-option">
+                            <input type="radio" class="visually-hidden filter-input filter-input-radio" name="product-group" 
+                            value="shaving" id="filter-accessories">
+                            <label for="filter-accessories">Бритвенные принадлежности</label>
+                        </li>
+                        <li class="filter-option">
+                            <input type="radio" class="visually-hidden filter-input filter-input-radio" name="product-group" 
+                            value="hair-care" id="filter-accessories">
+                            <label for="filter-accessories">Средства для ухода</label>
+                        </li>
+                        <li class="filter-option">
+                            <input type="radio" class="visually-hidden filter-input filter-input-radio" name="product-group" 
+                            value="accessories" id="filter-accessories">
+                            <label for="filter-accessories">Аксессуары</label>
+                        </li>
+                    </ul>
                 </fieldset>
             </form>
         </section>
@@ -80,17 +96,15 @@
             <ul class="catalog-list">
 
                 <li class="catalog-item">
-                    <h3>
-                         <a href="catalog-item.html">
-                             <span class="catalog-category"> Набор для путешествий</span> 
-                             <span class="catalog-item-title"> Baxter of California </span>
-                        </a>
-                    </h3>
-                    <p class="catalog-item-image">
-                        <a href="catalog-item.html">
+                    <a href="catalog-item.html">
+                        <h3>
+                            <span class="catalog-category"> Набор для путешествий</span> 
+                            <span class="catalog-item-title"> Baxter of California </span>
+                        </h3>
+                        <p class="catalog-item-image">
                             <img src="img/product-1.jpg" width="220" height="165" alt="Набор для путешествий Baxter of California">
-                        </a>
-                    </p>
+                        </p>
+                    </a>
                     <p class="catalog-iem-price">
                         <b>2 900 р</b>
                         <a href="#" class="button">Купить</a>
@@ -98,17 +112,15 @@
                 </li>
 
                 <li class="catalog-item">
-                    <h3>
-                        <a href="catalog-item.html">
+                    <a href="catalog-item.html">
+                        <h3>
                             <span class="catalog-category"> Увлажнающий кондиционер</span> 
                             <span class="catalog-item-title"> Baxter of California </span>
-                        </a>
-                    </h3>
-                    <p class="catalog-item-image">
-                        <a href="catalog-item.html">
+                        </h3>
+                        <p class="catalog-item-image">
                             <img src="img/product-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер Baxter of California">
-                        </a>
-                    </p>
+                        </p>
+                    </a>
                     <p class="catalog-iem-price">
                         <b>750 р</b>
                         <a href="#" class="button">Купить</a>
@@ -116,75 +128,67 @@
                 </li>
 
                 <li class="catalog-item">
+                    <a href="catalog-item.html">
                         <h3>
-                            <a href="catalog-item.html">
-                                <span class="catalog-category"> Гель для волос</span> 
-                                <span class="catalog-item-title">Suavetico</span>
-                            </a>
+                            <span class="catalog-category"> Гель для волос</span> 
+                            <span class="catalog-item-title">Suavetico</span>
                         </h3>
                         <p class="catalog-item-image">
-                            <a href="catalog-item.html">
-                                <img src="img/product-3.jpg" width="220" height="165" alt="Гель для волос Suavetico">
-                            </a>
+                            <img src="img/product-3.jpg" width="220" height="165" alt="Гель для волос Suavetico">
                         </p>
-                        <p class="catalog-iem-price">
-                            <b>290 р</b>
-                            <a href="#" class="button">Купить</a>
-                        </p>
+                    </a>
+                    <p class="catalog-iem-price">
+                        <b>290 р</b>
+                        <a href="#" class="button">Купить</a>
+                    </p>
                 </li>
 
                 <li class="catalog-item">
+                    <a href="catalog-item.html">
                         <h3>
-                            <a href="catalog-item.html">
-                                <span class="catalog-category">Глина для укладки волос</span> 
-                                <span class="catalog-item-title">American crew</span>
-                            </a>
+                            <span class="catalog-category">Глина для укладки волос</span> 
+                            <span class="catalog-item-title">American crew</span>
                         </h3>
                         <p class="catalog-item-image">
-                            <a href="catalog-item.html">
-                                <img src="img/product-4.jpg" width="220" height="165" alt="Глина для укладки волос American Crew">
-                            </a>
+                            <img src="img/product-4.jpg" width="220" height="165" alt="Глина для укладки волос American Crew">
                         </p>
-                        <p class="catalog-iem-price">
-                            <b>500 р</b>
-                            <a href="#" class="button">Купить</a>
-                        </p>
+                    </a>
+                    <p class="catalog-iem-price">
+                        <b>500 р</b>
+                        <a href="#" class="button">Купить</a>
+                    </p>
                 </li>
 
                 <li class="catalog-item">
+                    <a href="catalog-item.html">
                         <h3>
-                            <a href="catalog-item.html">
-                                <span class="catalog-category">Гель для волос</span> 
-                                <span class="catalog-item-title">American crew</span>
-                            </a>
+                            <span class="catalog-category">Гель для волос</span> 
+                            <span class="catalog-item-title">American crew</span>
                         </h3>
                         <p class="catalog-item-image">
-                            <a href="catalog-item.html">
-                                <img src="img/product-5.jpg" width="220" height="165" alt="Гель для волос American Crew">
-                            </a>
+                            <img src="img/product-5.jpg" width="220" height="165" alt="Гель для волос American Crew">
                         </p>
-                        <p class="catalog-iem-price">
-                            <b>300 р</b>
-                            <a href="#" class="button">Купить</a>
-                        </p>
+                    </a>
+                    <p class="catalog-iem-price">
+                        <b>300 р</b>
+                        <a href="#" class="button">Купить</a>
+                    </p>
                 </li>
 
                 <li class="catalog-item">
+                    <a href="catalog-item.html">
                         <h3>
-                            <a href="catalog-item.html">
-                                <span class="catalog-category">Набор для бритья</span> 
-                                <span class="catalog-item-title">Baxter of California</span>
-                            </a>
+                            <span class="catalog-category">Набор для бритья</span> 
+                            <span class="catalog-item-title">Baxter of California</span>
                         </h3>
                         <p class="catalog-item-image">
-                            <a href="catalog-item.html">
-                                <img src="img/product-6.jpg" width="220" height="165" alt="Набор для бритья Baxter of California">
-                            </a>
+                            <img src="img/product-6.jpg" width="220" height="165" alt="Набор для бритья Baxter of California">
                         </p>
-                        <p class="catalog-iem-price">
-                            <b>3 900 р</b>
-                            <a href="#" class="button">Купить</a>
-                        </p>
+                    </a>
+                    <p class="catalog-iem-price">
+                        <b>3 900 р</b>
+                        <a href="#" class="button">Купить</a>
+                    </p>
                 </li>
             </ul>
             <ul class="pagination-list">
