finish add css in barbershop index.html

--- a/barbershop/index.html
+++ b/barbershop/index.html
@@ -133,7 +133,7 @@
         </div>
         <p class="footer-copyright">
             <b>Разработано:</b>
-            <a href="https://github.com/AndreySavchenkov" class="button">Andrey Savchenkov</a>
+            <a href="https://AndreySavchenkov.github.io" class="button">Andrey Savchenkov</a>
         </p>
     </footer>
 
