--- a/barbershop/catalog.html
+++ b/barbershop/catalog.html
@@ -2,13 +2,16 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Каталог</title>
 </head>
 <body>
     <header class="main-header">
         <nav class="main-navigation">
             <a href="index.html" class="main-header-logo">
-                <img src="img/logo.svg" width="111" height="24" alt="Логотип барбершопа Бородинский">
+                <img src="img/min-logo.svg" width="111" height="24" alt="Логотип барбершопа Бородинский">
             </a>
             <ul class="site-navigation">
                 <li><a href="info.html" >Информация</a></li>
