--- a/barbershop/catalog.html
+++ b/barbershop/catalog.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Каталог</title>
 </head>
-<body>
+<body class="inner-page">
     <header class="main-header">
         <nav class="main-navigation">
             <a href="index.html" class="main-header-logo">
@@ -33,7 +33,7 @@
             <li><a href="catalog.html">Магазин</a></li>
             <li><a href="breadcrubms-current.html">Средства для ухода</a></li>
         </ul>
-        <section class="filters">
+        <section class="filter">
             <h2 class="visually-hidden">Фильтр товаров</h2>
             <form action="https://echo.htmlacacademy.ru" class="filter" method="get">
                 <fieldset>
@@ -61,7 +61,7 @@
                         </li>
                         <li class="filter-option">
                             <input type="checkbox" class="visually-hidden filter-input filter-input-checkbox" name="murrays"
-                            id="filter-murrays">
+                            id="filter-murrays" disabled>
                             <label for="filter-murrays">Myrray's</label> 
                         </li>
                         <li class="filter-option">
@@ -108,7 +108,7 @@
                             <img src="img/product-1.jpg" width="220" height="165" alt="Набор для путешествий Baxter of California">
                         </p>
                     </a>
-                    <p class="catalog-iem-price">
+                    <p class="catalog-item-price">
                         <b>2 900 р</b>
                         <a href="#" class="button">Купить</a>
                     </p>
@@ -124,7 +124,7 @@
                             <img src="img/product-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер Baxter of California">
                         </p>
                     </a>
-                    <p class="catalog-iem-price">
+                    <p class="catalog-item-price">
                         <b>750 р</b>
                         <a href="#" class="button">Купить</a>
                     </p>
@@ -140,7 +140,7 @@
                             <img src="img/product-3.jpg" width="220" height="165" alt="Гель для волос Suavetico">
                         </p>
                     </a>
-                    <p class="catalog-iem-price">
+                    <p class="catalog-item-price">
                         <b>290 р</b>
                         <a href="#" class="button">Купить</a>
                     </p>
@@ -156,7 +156,7 @@
                             <img src="img/product-4.jpg" width="220" height="165" alt="Глина для укладки волос American Crew">
                         </p>
                     </a>
-                    <p class="catalog-iem-price">
+                    <p class="catalog-item-price">
                         <b>500 р</b>
                         <a href="#" class="button">Купить</a>
                     </p>
@@ -172,7 +172,7 @@
                             <img src="img/product-5.jpg" width="220" height="165" alt="Гель для волос American Crew">
                         </p>
                     </a>
-                    <p class="catalog-iem-price">
+                    <p class="catalog-item-price">
                         <b>300 р</b>
                         <a href="#" class="button">Купить</a>
                     </p>
@@ -188,7 +188,7 @@
                             <img src="img/product-6.jpg" width="220" height="165" alt="Набор для бритья Baxter of California">
                         </p>
                     </a>
-                     <p class="catalog-iem-price">
+                     <p class="catalog-item-price">
                          <b>3 900 р</b>
                          <a href="#" class="button">Купить</a>
                      </p>
