--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<div class="header">
 					<div class="header--myName">
 						<h1 class="my_name">Andrey Savchenkov</h1>
-						<h2>Junior Frontend Developer</h2>
+						<h2>Frontend Developer</h2>
 					</div>
 					<div class="header--myFoto">
 						<img class="face" src="img/face.png" alt="face">	
