add Icon Bar project

--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
 		<section>
 			<div class="container">
 				<div class="projects">
-					<h2 class="h2--project">My projects site layout:</h2>
-					<a class="projects-link" href="../mogo/index.html">"MoGo"</a>
+					<h2 class="h2--project">My projects:</h2>
+					<a class="projects-link" href="../mogo/index.html">"MoGo" site layout</a>
+					<a href="../howTo/menu/IconBar/IconBar.html" class="projects-link">Icon Bar</a>
 				</div>
 			</div>
 		</section>
