--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 					<h2 class="h2--project">My projects:</h2>
 					<a class="projects-link" href="../mogo/index.html">"MoGo" site layout</a>
 					<a href="../howTo/menu/IconBar/IconBar.html" class="projects-link">Icon Bar</a>
+					<a href="../howTo/menu/menuIcon.html" class="projects-link">Menu Icon</a>
 				</div>
 			</div>
 		</section>
