add overlay icon

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 					<a href="../howTo/menu/IconBar/IconBar.html" class="projects-link">Icon Bar</a>
 					<a href="../howTo/menu/menuIcon.html" class="projects-link">Menu Icon</a>
 					<a href="../howTo/images/image-overlay-title.html" class="projects-link">Image Overlay Title</a>
+					<a href="../howTo/images/imageOvarlayIcon/imageOverlayIcon.html">Image Overlay Icon</a>
 				</div>
 			</div>
 		</section>
