--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 		
 	</head>
 	<body>
+
 		<header>
+
 			<div class="container">
 				<div class="header">
 					<div class="header--myName">
@@ -32,9 +34,11 @@
 					</div>
 				</div>
 			</div>
+
 		</header>
 		<!-- my skills -->
 		<section>
+
 			<div class="container">
 				<div class="skills">
 					<div class="hard--skills">
@@ -58,8 +62,10 @@
 					</div>
 				</div>
 			</div>
+
 		</section>
 		<section>
+
 			<div class="container">
 				<div class="projects">
 					<h2 class="h2--project">My projects:</h2>
@@ -68,8 +74,10 @@
 					<a href="../howTo/menu/menuIcon.html" class="projects-link">Menu Icon</a>
 					<a href="../howTo/images/image-overlay-title.html" class="projects-link">Image Overlay Title</a>
 					<a href="../howTo/images/imageOvarlayIcon/imageOverlayIcon.html" class="projects-link">Image Overlay Icon</a>
+					<a href="../howTo/menu/accordion.html" class="projects-link">Accordion</a>
 				</div>
 			</div>
+
 		</section>
 		<footer>
 
