--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 					<a href="../howTo/images/image-overlay-title.html" class="projects-link">Image Overlay Title</a>
 					<a href="../howTo/images/imageOvarlayIcon/imageOverlayIcon.html" class="projects-link">Image Overlay Icon</a>
 					<a href="../howTo/menu/accordion.html" class="projects-link">Accordion</a>
+					<a href="../howTo/animations/animating-variable-fonts.html class="projects-link">Animating Variable Fonts</a>
 				</div>
 			</div>
 
