--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 					<a href="../howTo/menu/accordion.html" class="projects-link">Accordion</a>
 					<a href="../howTo/animations/animating-variable-fonts.html" class="projects-link">Animating Variable Fonts</a>
 					<a href="../howTo/images/snakeAnImage/snake-an-image.html" class="projects-link">Snake an image</a>
+					<a href="../howTo/menu/tabs.html" class="projects-link">Tabs</a>
 				</div>
 			</div>
 
