Add top navigation

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 					<a href="../howTo/animations/animating-variable-fonts.html" class="projects-link">Animating Variable Fonts</a>
 					<a href="../howTo/images/snakeAnImage/snake-an-image.html" class="projects-link">Snake an image</a>
 					<a href="../howTo/menu/tabs.html" class="projects-link">Tabs</a>
+					<a href="../howTo/menu/topNavigation.html" class="projects-link">Top Navigation</a>
 				</div>
 			</div>
 
