add project fixed sidebar

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 					<a href="../howTo/images/snakeAnImage/snake-an-image.html" class="projects-link">Snake an image</a>
 					<a href="../howTo/menu/tabs.html" class="projects-link">Tabs</a>
 					<a href="../howTo/menu/topNavigation.html" class="projects-link">Top Navigation</a>
+					<a href="../howTo/menu/fixedSidebar.html" class="projects-link">Fixed Sidebar</a>
 				</div>
 			</div>
 
