add bottom navigation bar

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 					<a href="../howTo/menu/topNavigation.html" class="projects-link">Top Navigation</a>
 					<a href="../howTo/menu/fixedSidebar.html" class="projects-link">Fixed Sidebar</a>
 					<a href="../howTo/menu/hoverableDropdown.html" class="projects-link">Hoverable Dropdown</a>
+					<a href="../howTo/menu/navigationBar.html" class="projects-link">Bottom Navigation Bar</a>
 				</div>
 			</div>
 
