--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 					<a href="../howTo/menu/fixedSidebar.html" class="projects-link">Fixed Sidebar</a>
 					<a href="../howTo/menu/hoverableDropdown.html" class="projects-link">Hoverable Dropdown</a>
 					<a href="../howTo/menu/navigationBar.html" class="projects-link">Bottom Navigation Bar</a>
+					<a href="../howTo/menu/tabHeaders.html" class="projects-link">Tab Header</a>
 				</div>
 			</div>
 
