add  hover sidenav buttons

--- a/howTo/menu/topNavigation.html
+++ b/howTo/menu/topNavigation.html
@@ -7,7 +7,7 @@
 
     <style>
         /*Style a black background color to the top navigation*/
-        .topnav {
+        .topnav {d
             background-color: #333;
             overflow: hidden;
         }
