--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 					<a href="../howTo/menu/hoverableDropdown.html" class="projects-link">Hoverable Dropdown</a>
 					<a href="../howTo/menu/navigationBar.html" class="projects-link">Bottom Navigation Bar</a>
 					<a href="../howTo/menu/tabHeaders.html" class="projects-link">Tab Header</a>
+					<a href="../AndreySavchenkov.github.io/howTo/menu/hoverSidenavButtons.html" class="projects-link">Hover Sidenav Buttons</a>
 				</div>
 			</div>
 
