add project alert buttons

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 					<a href="../howTo/menu/tabHeaders.html" class="projects-link">Tab Header</a>
 					<a href="../howTo/menu/hoverSidenavButtons.html" class="projects-link">Hover Sidenav Buttons</a>
 					<a href="../howTo/menu/subnav.html" class="projects-link">Subnav</a>
+					<a href="../howTo/buttons/alertButtons.html" class="projects-link">Alert Buttons</a>
 				</div>
 			</div>
 
