add project my animation

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 					<a href="../howTo/menu/hoverSidenavButtons.html" class="projects-link">Hover Sidenav Buttons</a>
 					<a href="../howTo/menu/subnav.html" class="projects-link">Subnav</a>
 					<a href="../howTo/buttons/alertButtons.html" class="projects-link">Alert Buttons</a>
+					<a href="../howTo/animations/test-my-animation/testMyAnimation.html" class="projects-link">Test My Animation</a>
 				</div>
 			</div>
 
