--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 					<a href="../howTo/animations/test-my-animation/testMyAnimation.html" class="projects-link">Test My Animation</a>
 					<a href="../howTo/forms/CSSSkillBar.html" class="projects-link">CSS Skills Bar</a>
 					<a href="../howTo/icons/test-google-icon.html" class="projects-link">Add Icons With Google</a>
+					<a href="../howTo/slider/slider.html" class="projects-link">Slider</a>
 				</div>
 			</div>
 
