add vertical text

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 					<a href="../howTo/forms/CSSSkillBar.html" class="projects-link">CSS Skills Bar</a>
 					<a href="../howTo/icons/test-google-icon.html" class="projects-link">Add Icons With Google</a>
 					<a href="../howTo/slider/slider.html" class="projects-link">Slider</a>
+					<a href="../howTo/examples/bungeeExample.html" class="projects-link">Vertical Text</a>
 				</div>
 			</div>
 
