--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" href="style.css">
 		<title>Andrey Savchenknov</title>
 		<link href="https://fonts.googleapis.com/css?family=Days+One|Kaushan+Script|Swanky+and+Moo+Moo&display=swap" rel="stylesheet">
+		<link rel="shortcut icon" type="image/png" href="../img/favicon.png"/>
 		
 	</head>
 	<body>
