add fixed top menu

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 					<a href="../howTo/icons/test-google-icon.html" class="projects-link">Add Icons With Google</a>
 					<a href="../howTo/slider/slider.html" class="projects-link">Slider</a>
 					<a href="../howTo/examples/bungeeExample.html" class="projects-link">Vertical Text</a>
+					<a href="../howTo/menu/fixedTopMenu.html" class="projects-link">Fixed Top Menu</a>
 				</div>
 			</div>
 
