add grid layaut

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 					<a href="../howTo/examples/bungeeExample.html" class="projects-link">Vertical Text</a>
 					<a href="../howTo/menu/fixedTopMenu.html" class="projects-link">Fixed Top Menu</a>
 					<a href="../howTo/page/responsiveDesign/responsiveDesign.html" class="projects-link">Responsive Design</a>
+					<a href="../howTo/page/grid.html" class="projects-link">GRID Layaut</a>
 				</div>
 			</div>
 
