--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 					<a href="../howTo/menu/fixedTopMenu.html" class="projects-link">Fixed Top Menu</a>
 					<a href="../howTo/page/responsiveDesign/responsiveDesign.html" class="projects-link">Responsive Design</a>
 					<a href="../howTo/page/grid.html" class="projects-link">GRID Layaut</a>
-					<a href="../howTo/page/flexBox/flexBoxTest.html" class="projects-links">Flex Container</a>
+					<a href="../howTo/page/flexBox/flexBoxTest.html" class="projects-link">Flex Container</a>
 				</div>
 			</div>
 
