add project with image

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 					<a href="../howTo/page/responsiveDesign/responsiveDesign.html" class="projects-link">Responsive Design</a>
 					<a href="../howTo/page/grid.html" class="projects-link">GRID Layaut</a>
 					<a href="../howTo/page/flexBox/flexBoxTest.html" class="projects-link">Flex Container</a>
+					<a href="../howTo/images/image with form/pictureWithForm.html" class="projects-link">Picture With Form</a>
 				</div>
 			</div>
 
