add site example

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 					<a href="../howTo/page/grid.html" class="projects-link">GRID Layaut</a>
 					<a href="../howTo/page/flexBox/flexBoxTest.html" class="projects-link">Flex Container</a>
 					<a href="../howTo/images/image with form/pictureWithForm.html" class="projects-link">Picture With Form</a>
+					<a href="../howTo/page/siteExample.html" class="projects-link">Site example</a>
 				</div>
 			</div>
 
