--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 					<a href="../howTo/page/contact/contact.html" class="projects-link">Form Contact</a>
 					<a href="../howTo/map/myFirstMap.html" class="projects-link">Google Map</a>
 					<a href="../howTo/page/counter.html" class="projects-link">Counter</a>
+					<a href="../howTo/images/miniImage/miniImage.html" class="projects-link">Mini Image</a>
 				</div>
 			</div>
 
