add project table menu cafe

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 					<a href="../howTo/map/myFirstMap.html" class="projects-link">Google Map</a>
 					<a href="../howTo/page/counter.html" class="projects-link">Counter</a>
 					<a href="../howTo/images/miniImage/miniImage.html" class="projects-link">Mini Image</a>
+					<a href="../howTo/table/tableRomashka.html" class="projects-link">Table Menu Cafe</a>
 				</div>
 			</div>
 
