add portfolio blocks

--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
             >Table Menu Cafe</a
           >
           <a href="../howTo/icons/loader.html" class="projects-link">Loader</a>
+          <a href="../howTo/page/block1.html" class="projects-link">Portfolio Blocks</a>
         </div>
       </div>
     </section>
