add block with screenshot

--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
           >
           <a href="../howTo/icons/loader.html" class="projects-link">Loader</a>
           <a href="../howTo/page/block1.html" class="projects-link">Portfolio Blocks</a>
+          <a href="../howTo/page/block2.html" class="projects-link">Block with Screenshot</a>
         </div>
       </div>
     </section>
