add animation block

--- a/index.html
+++ b/index.html
@@ -197,8 +197,15 @@
             >Table Menu Cafe</a
           >
           <a href="../howTo/icons/loader.html" class="projects-link">Loader</a>
-          <a href="../howTo/page/block1.html" class="projects-link">Portfolio Blocks</a>
-          <a href="../howTo/page/block2.html" class="projects-link">Block with Screenshot</a>
+          <a href="../howTo/page/block1.html" class="projects-link"
+            >Portfolio Blocks</a
+          >
+          <a href="../howTo/page/block2.html" class="projects-link"
+            >Block with Screenshot</a
+          >
+          <a href="../howTo/page/block3.html" class="projects-link"
+            >Animation Block</a
+          >
         </div>
       </div>
     </section>
