add responsive menu for wedding salon

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
         <a href="../howTo/page/block2.html" class="projects-link">Block with Screenshot</a>
         <a href="../howTo/page/block3.html" class="projects-link">Animation Block</a>
         <a href="../howTo/menu/responsiveMenu.html" class="projects-link">Responsive Menu</a>
+        <a href="../howTo/menu/responsiveMenu2.html" class="projects-link">Responsive Menu for Wedding Salon</a>
       </div>
     </div>
   </section>
