--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
         <a href="../howTo/menu/responsiveMenu2.html" class="projects-link">Responsive Menu for Wedding Salon</a>
         <a href="../howTo/menu/responsiveMenu3.html" class="projects-link">Responsive Menu with Circles</a>
         <a href="../howTo/menu/responsiveMenu4.html" class="projects-link">Responsive Menu with Ribbon</a>
+        <a href="../howTo/page/worldHouse/index.html" class="projects-link">World House</a>
       </div>
     </div>
   </section>
