finish snikers shop

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
         <a href="../howTo/menu/responsiveMenu3.html" class="projects-link">Responsive Menu with Circles</a>
         <a href="../howTo/menu/responsiveMenu4.html" class="projects-link">Responsive Menu with Ribbon</a>
         <a href="../howTo/page/worldHouse/index.html" class="projects-link">World House</a>
+        <a href="../howTo/page/sneakers/index.html" class="projects-link">Snikers Shop</a>
       </div>
     </div>
   </section>
