add css for middle text

--- a/howTo/minto/index.html
+++ b/howTo/minto/index.html
@@ -25,6 +25,11 @@
             <p class="text1">Minto</p>
             <p class="text2">A minimal Web Design from cssauthor.com</p>
         </header>
+        <div class="middle-text">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor </br> incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</br> exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            </p>
+        </div>
     </div>
 </body>
 </html>
