change link for Mint

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <a href="../howTo/menu/responsiveMenu4.html" class="projects-link">Responsive Menu with Ribbon</a>
         <a href="../howTo/page/worldHouse/index.html" class="projects-link">World House</a>
         <a href="../howTo/page/sneakers/index.html" class="projects-link">Snikers Shop</a>
-        <a href="../howTo/page/minto/index.html">Minto</a>
+        <a href="../howTo/page/minto/index.html" class="projects-link">Minto</a>
       </div>
     </div>
   </section>
