add style for registered form

--- a/howTo/forms/registerForm/index.html
+++ b/howTo/forms/registerForm/index.html
@@ -14,8 +14,8 @@
         <p class="registeredForm__title">Авторизация</p>
 
         <form action="">
-          <input class="registeredForm__email" type="text" />
-          <input class="registeredForm__password" type="password" />
+          <input class="registeredForm__email" placeholder="Email" type="text" />
+          <input class="registeredForm__password" placeholder="Пароль" type="password" />
           <input class="registeredForm__submit" type="submit" />
         </form>
 
