change code for validation

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <a href="../howTo/page/responsiveDesign/responsiveDesign.html" class="projects-link">Responsive Design</a>
         <a href="../howTo/page/grid.html" class="projects-link">GRID Layaut</a>
         <a href="../howTo/page/flexBox/flexBoxTest.html" class="projects-link">Flex Container</a>
-        <a href="../howTo/images/image with form/pictureWithForm.html" class="projects-link">Picture With Form</a>
+        <a href="../howTo/images/imageWithForm/pictureWithForm.html" class="projects-link">Picture With Form</a>
         <a href="../howTo/page/siteExample.html" class="projects-link">Site Example</a>
         <a href="../howTo/page/siteExampleW3/siteExampleW3.html" class="projects-link">Site Example w3</a>
         <a href="../howTo/page/contact/contact.html" class="projects-link">Form Contact</a>
@@ -121,7 +121,7 @@
   <footer></footer>
 
   <!-- Yandex.Metrika counter -->
-  <script type="text/javascript">
+  <script>
     (function (m, e, t, r, i, k, a) {
       m[i] =
         m[i] ||
