add link for leonardo

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
         <a href="../howTo/page/worldHouse/index.html" class="projects-link">World House</a>
         <a href="../howTo/page/sneakers/index.html" class="projects-link">Snikers Shop</a>
         <a href="../howTo/page/minto/index.html" class="projects-link">Minto</a>
+        <a href="../howTo/page/leonardo/index.html" class="projects-link">Leonardo</a>
       </div>
     </div>
   </section>
